Not completed and Re installed Zorin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,9 @@
   // Run tasks in macOS
   "terminal.integrated.profiles.osx": {
     "zsh": { "path": "/bin/zsh", "args": ["-l", "-i"] }
-  }
+  },
+  "markdown.validate.enabled": true,
+  "cSpell.words": [
+    "BEEWATCH"
+  ]
 }
